# aks-ip-diagnostic

./: .dockerignore  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
charts/aks-ip-diagnostic/: Chart.yaml  values.yaml
charts/aks-ip-diagnostic/templates/: _helpers.tpl  cronjob.yaml  rbac.yaml  serviceaccount.yaml
docs/: CODE_QUALITY_NOTES.md  COST_ANALYSIS_GUIDE.md  DOCS_INDEX.md  HELM_CHART_GUIDE.md  JSON_OUTPUT_GUIDE.md  POD_LEVEL_ANALYSIS.md  PRODUCTION_READINESS.md  REFACTORING_NOTES.md  RELEASE_GUIDE.md
examples/: cost_analysis_demo.py  json_output_demo.py  pod_analysis_demo.py
src/: main.py
src/aks_clients/: aks_client.py  exceptions.py  kubernetes_client.py  network_client.py
src/aks_ip_diagnostic/: __init__.py  cli.py  exit_codes.py  models.py  orchestrator.py  paths.py  redaction.py  scan_runner.py  status.py
src/aks_ip_diagnostic/collectors/: __init__.py  azure.py
src/analytics/: __init__.py  cost_analyzer.py
src/diagnostics/: ip_exhaustion.py  max_pods.py  pod_ip_analysis.py  provisioning_state.py  subnet_capacity.py
src/reports/: formatters.py  generator.py  json_schema.py  json_validator.py
src/utils/: config.py  cost_calculator.py  logger.py
tests/: test_azure_clients.py  test_cli_production.py  test_diagnostics.py  test_orchestrator_refactor.py  test_pod_ip_analysis.py
