[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aks-ip-diagnostic"
version = "0.3.2"
description = "Read-only AKS IP capacity and pod IP diagnostics"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Azer"}]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "azure-identity>=1.16,<2",
  "azure-mgmt-containerservice>=30,<40",
  "azure-mgmt-network>=25,<30",
  "kubernetes>=29,<35",
  "pyyaml>=6,<7",
  "jsonschema>=4,<5",
  "tabulate>=0.9,<1",
  "rich>=13,<15",
  "colorama>=0.4,<1",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.6,<1",
  "bandit>=1.7,<2",
  "pip-audit>=2,<3",
  "build>=1,<2",
  "twine>=6,<7",
]

[project.scripts]
aks-ip-diagnostic = "aks_ip_diagnostic.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
